--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -44,9 +44,10 @@
                   <input type="text" class="form__control" id="name" required>
                 </div>
 
-                <div class="form__group">
+                <div class="form__group form__group--has-error">
                   <label for="email" class="form__label">Email Address</label>
                   <input type="email" class="form__control" id="email" required>
+                  <p class="form__error-message">Invalid email address</p>
                 </div>
 
                 <div class="form__group">
