create profile explorer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@
 @import 'components/page';
 @import 'components/pagination';
 @import 'components/panel';
+@import 'components/profile-explorer';
 @import 'components/program-panel';
 @import 'components/program-spotlight';
 @import 'components/projects';
