create profile component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,6 +49,7 @@
 @import 'components/pagination';
 @import 'components/panel';
 @import 'components/profile-explorer';
+@import 'components/profile';
 @import 'components/program-panel';
 @import 'components/program-spotlight';
 @import 'components/projects';
