change page wrapper to section

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 
-<article class="page">
+<section class="page">
 
   {% include 'partials/page-header.twig' with {
     title: 'Events',
@@ -38,6 +38,6 @@
     </div>
   </div>
 
-</article>
+</section>
 
 {% endblock %}
