change breadcrumb list to ordered

--- a/src/templates/partials/breadcrumb.twig
+++ b/src/templates/partials/breadcrumb.twig
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-  <ul class="breadcrumb__list">
+  <ol class="breadcrumb__list">
     <li class="breadcrumb__item">
       <a href="#" class="breadcrumb__link">Middlebury Institute of International Studies</a>
     </li>
@@ -8,5 +8,5 @@
         <a href="{{item.href}}" class="breadcrumb__link">{{item.text}}</a>
       </li>
     {% endfor %}
-  </ul>
+  </ol>
 </nav>
