--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,6 +53,7 @@
 @import 'components/program-panel';
 @import 'components/program-spotlight';
 @import 'components/projects';
+@import 'components/publications';
 @import 'components/search-form';
 @import 'components/search-results-item';
 @import 'components/section';
