hide page nav on mobile if it has toggler

--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -8,6 +8,12 @@
     display: block;
   }
 
+  &.has-toggler {
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
+  }
+
   &.is-toggled {
     display: block;
   }
