create callout contacts partial

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 // components
 @import 'components/breadcrumb';
 @import 'components/button';
+@import 'components/callout-contacts';
 @import 'components/callout-group';
 @import 'components/callout-links';
 @import 'components/callout';
