change page wrapper to use section

--- a/src/templates/t16-info-for-students.twig
+++ b/src/templates/t16-info-for-students.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block page %}
-  <article class="page">
+  <section class="page">
 
     {% include 'partials/page-header.twig' with {
       title: 'Information for New Students',
@@ -145,5 +145,5 @@
 
     {#TODO: PSD has pagination/load more button but do we want that?#}
 
-  </article>
+  </section>
 {% endblock %}
