create profile-info styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@
 @import 'components/pagination';
 @import 'components/panel';
 @import 'components/profile-explorer';
+@import 'components/profile-info';
 @import 'components/profile-spotlight-item';
 @import 'components/profile';
 @import 'components/program-panel';
