--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,8 @@
 @import '../../node_modules/bootstrap/scss/mixins/clearfix';
 @import '../../node_modules/bootstrap/scss/utilities/screenreaders';
 
+@import '../../node_modules/swiper/dist/css/swiper';
+
 // base
 @import 'base/global';
 @import 'base/typography';
