change callout group to use own styles for borders instead of row--dividers

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'components/button';
 @import 'components/callout-contacts';
 @import 'components/callout-group';
+@import 'components/callout-group-item';
 @import 'components/callout-links';
 @import 'components/callout';
 @import 'components/card';
