--- a/src/templates/partials/callout-group.twig
+++ b/src/templates/partials/callout-group.twig
@@ -1,30 +1,28 @@
-<section class="callout-group">
-  <div class="container">
-    <div class="row row--dividers">
-      <div class="col-lg-3">
-        {% include 'partials/callout-group-item.twig' with {
-            title: 'Take a Step Forward',
-            buttonText: 'Request Info'
-        } %}
-      </div>
-      <div class="col-lg-3">
-        {% include 'partials/callout-group-item.twig' with {
-          title: 'Experience Monterey',
-          buttonText: 'Visit Campus'
-        } %}
-      </div>
-      <div class="col-lg-3">
-        {% include 'partials/callout-group-item.twig' with {
-          title: 'Preview Day, July 15',
-          buttonText: 'Register'
-        } %}
-      </div>
-      <div class="col-lg-3">
-        {% include 'partials/callout-group-item.twig' with {
-          title: 'Spring 2017 Applications<br>Now Open',
-          buttonText: 'Explore Requirements'
-        } %}
-      </div>
+<div class="callout-group">
+  <div class="callout-group__row">
+    <div class="callout-group__item">
+      {% include 'partials/callout-group-item.twig' with {
+          title: 'Take a Step Forward',
+          buttonText: 'Request Info'
+      } %}
+    </div>
+    <div class="callout-group__item">
+      {% include 'partials/callout-group-item.twig' with {
+        title: 'Experience Monterey',
+        buttonText: 'Visit Campus'
+      } %}
+    </div>
+    <div class="callout-group__item">
+      {% include 'partials/callout-group-item.twig' with {
+        title: 'Preview Day, July 15',
+        buttonText: 'Register'
+      } %}
+    </div>
+    <div class="callout-group__item">
+      {% include 'partials/callout-group-item.twig' with {
+        title: 'Spring 2017 Applications<br>Now Open',
+        buttonText: 'Explore Requirements'
+      } %}
     </div>
   </div>
-</section>
+</div>
