--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -12,7 +12,7 @@
       <a href="#site-nav" class="site-menu-button" data-toggle-target=".site-header">
         <span class="site-menu-button__text site-menu-button__text--open">Menu</span>
         <span class="site-menu-button__text site-menu-button__text--close">Close</span>
-        <i class="site-menu-button__icon icon icon--hamburger"></i>
+        <span class="site-menu-button__icon icon icon--hamburger"></span>
       </a>
     </div>
   </div>
