header: Add an id to the site-header__nav element so it can be linked by the hamburger.

--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="site-header__nav">
+    <div class="site-header__nav" id="site-nav">
       {% include 'partials/nav.twig' %}
     </div>
   </div>
