hero-form: Ensure that the image background of the hero form is not considered content using aria-hidden and role presentation.

--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -3,7 +3,7 @@
     <picture>
       <source srcset="http://placehold.it/1440x570" media="(min-width: 580px)">
       <source srcset="http://placehold.it/580x230">
-      <img src="http://placehold.it/1440x570" alt="">
+      <img src="http://placehold.it/1440x570" alt="" aria-hidden="true" role="presentation">
     </picture>
   </div>
   <div class="hero-form__content">
