--- a/src/scss/components/_program-spotlight.scss
+++ b/src/scss/components/_program-spotlight.scss
@@ -39,13 +39,18 @@
 }
 
 .program-spotlight__container {
-  height: 100%;
+
 }
 
 .program-spotlight__content {
-  height: 100%;
-  display: flex;
-  height: 600px;
+  @include media(sm) {
+    display: flex;
+    height: 600px;
+  }
+
+  @include media-breakpoint-only(xs) {
+    display: block;
+  }
 }
 
 .program-spotlight__item {
