--- a/src/templates/t03-program.twig
+++ b/src/templates/t03-program.twig
@@ -4,7 +4,7 @@
 
 <article class="page">
 
-  {% include 'partials/page-header.twig' with {
+  {% embed 'partials/page-header.twig' with {
     title: 'Masters in Public Administration',
     breadcrumb: [
       {
@@ -20,6 +20,10 @@
     callout_link_url: '#',
     callout_link_text: 'Apply Now'
   } %}
+    {% block controls %}
+      {% include 'partials/page-nav-button.twig' %}
+    {% endblock %}
+  {% endembed %}
 
   <div class="container">
     <div class="row">
