--- a/src/templates/partials/card.twig
+++ b/src/templates/partials/card.twig
@@ -13,7 +13,7 @@
   {% endif %}
   <header class="card__header">
     {% if tag %}<p class="card__tag">{{tag}}</p>{% endif %}
-    <h3 class="card__title {% if image_lg is empty %}card__title--lg{% endif %}"><a href="{{href}}" class="card__link">{{title}}</a></h3>
+    <h3 class="card__title {% if lg %}card__title--lg{% endif %}"><a href="{{href}}" class="card__link">{{title}}</a></h3>
   </header>
   <div class="card__body">
     {{blurb}}
