--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -25,12 +25,14 @@
               {% block content %}
                 {% for i in 0..2 %}
 
-                  <article class="{% if not loop.last %}u-mb-6{% endif %}">
-                    <h3><a href="#">Undergraduate Interns Tackle Nonproliferation Issues</a></h3>
-                    <p>The Liberian Senate recently appointed Middlebury Institute alumnus Jacob Jallah MAIEM ’15 as assistant minister for technical services for Liberia’s Ministry of Information, Cultural Affairs and Tourism.</p>
-                  </article>
 
                 {% endfor %}
+                      <article class="story-teaser-lite">
+                        <h3 class="story-teaser-lite__title"><a href="#">Undergraduate Interns Tackle Nonproliferation Issues</a></h3>
+                        <div class="story-teaser-lite__blurb">
+                          <p>The Liberian Senate recently appointed Middlebury Institute alumnus Jacob Jallah MAIEM ’15 as assistant minister for technical services for Liberia’s Ministry of Information, Cultural Affairs and Tourism.</p>
+                        </div>
+                      </article>
               {% endblock %}
             {% endembed %}
 
