--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -26,13 +26,11 @@
                 <ol class="list list--lg">
                   {% for i in 0..2 %}
                     <li class="list__item">
-                      <article class="story-teaser-lite">
-                        <h3 class="story-teaser-lite__title"><a href="#">Undergraduate Interns Tackle Nonproliferation Issues</a></h3>
-                        <div class="story-teaser-lite__blurb">
-                          <p>The Liberian Senate recently appointed Middlebury Institute alumnus Jacob Jallah MAIEM ’15 as assistant minister for technical services for Liberia’s Ministry of Information, Cultural Affairs and Tourism.</p>
-                        </div>
-                      </article>
-                    </li>
+                      {% include 'partials/story-teaser-lite.twig' with {
+                        title: 'Undergraduate Interns Tackle Nonproliferation Issues',
+                        link: '#',
+                        blurb: "<p>The Liberian Senate recently appointed Middlebury Institute alumnus Jacob Jallah MAIEM ’15 as assistant minister for technical services for Liberia’s Ministry of Information, Cultural Affairs and Tourism.</p>"
+                      } %}
                   {% endfor %}
                 </ol>
               {% endblock %}
