import missing story teaser lite

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,6 +71,7 @@
 @import 'components/site-search';
 @import 'components/social-links';
 @import 'components/spotlight-item';
+@import 'components/story-teaser-lite';
 @import 'components/video';
 
 // utils
