--- a/src/templates/partials/page-header.twig
+++ b/src/templates/partials/page-header.twig
@@ -6,7 +6,7 @@
         {% include 'partials/breadcrumb.twig' with { items: breadcrumb } %}
       </div>
       <div class="page-header__content">
-        <h1 class="page-header__title">{{title}}</h1>
+        <h1 class="page-header__title" id="midd-page-header-label">{{title}}</h1>
       </div>
       {% set _block = block('controls') %}
       {% if _block is not empty %}
