--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -14,7 +14,7 @@
           <form action="">
             <div class="input-group">
               <div class="input-group__field">
-                <label for="search" class="hero-form__label sr-only">Search</label>
+                <label for="search" class="hero-form__label sr-only" id="midd-hero-form-label">Search</label>
                 <input type="search" placeholder="Enter your keywords" class="hero-form__control form__control" id="search" required>
               </div>
               <div class="input-group__button">
