--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -7,7 +7,7 @@
       title: 'Page Not Found',
     } %}
 
-    <section class="section">
+    <section class="section" aria-labelledby="midd-hero-form-label">
       {% include 'partials/hero-form.twig' %}
     </section>
 
