--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -11,7 +11,7 @@
       {% include 'partials/hero-form.twig' %}
     </section>
 
-    <section class="section">
+    <section class="section" aria-label="Latest News and Events">
 
       <div class="container">
         <div class="row row--dividers">
