Add an aria-labelledby attribute to the Latest News and Upcoming Events sections.

--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -20,7 +20,8 @@
               title: 'Latest News',
               class: 'u-mb-0',
               moreLinkText: 'More News',
-              moreLinkHref: '#'
+              moreLinkHref: '#',
+              labelledby: 'midd-latest-news-label'
             } %}
               {% block content %}
                 {% for i in 0..2 %}
@@ -40,7 +41,8 @@
               title: 'Upcoming Events',
               class: 'u-mb-0',
               moreLinkText: 'More Events',
-              moreLinkHref: '#'
+              moreLinkHref: '#',
+              labelledby: 'midd-upcoming-events-label'
             } %}
               {% block content %}
                 {% for i in 0..2 %}
