--- a/src/templates/partials/section.twig
+++ b/src/templates/partials/section.twig
@@ -1,6 +1,6 @@
-<section class="section{% if class %} {{class}}{% endif %}">
+<section class="section{% if class %} {{class}}{% endif %}"{% if labelledby %} aria-labelledby="{{labelledby}}"{% endif %}>
   <header class="section__header">
-    <h2 class="section__title">{{title}}</h2>
+    <h2 class="section__title"{% if labelledby %} id="{{labelledby}}"{% endif %}>{{title}}</h2>
     {% if moreLinkHref and moreLinkText %}
     <div class="section__nav">
       <a href="{{moreLinkHref}}" class="section__nav-link">{{moreLinkText}}</a>
