create speaker component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -70,6 +70,7 @@
 @import 'components/site-nav';
 @import 'components/site-search';
 @import 'components/social-links';
+@import 'components/speaker';
 @import 'components/spotlight-item';
 @import 'components/story-teaser-lite';
 @import 'components/video';
