--- a/src/templates/partials/speaker.twig
+++ b/src/templates/partials/speaker.twig
@@ -1,6 +1,6 @@
 <div class="speaker">
   <img src="//placehold.it/116x161" alt="" class="speaker__photo">
-  <h3 class="speaker__name">Michael Green</h3>
+  <h3 class="speaker__name"><a href="#">Michael Green</a></h3>
   <div class="speaker__content">
     <p>Program Manager of the Monterey State Historic Park, who will discuss the history of Cooper Molera.</p>
   </div>
