refine event detail markup

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'components/card';
 @import 'components/carousel';
 @import 'components/drawer';
+@import 'components/event-detail';
 @import 'components/event-teaser-lite';
 @import 'components/event-teaser';
 @import 'components/filter';
@@ -63,6 +64,7 @@
 @import 'components/search-form';
 @import 'components/search-results-item';
 @import 'components/section';
+@import 'components/share';
 @import 'components/sidebar-search';
 @import 'components/site-container';
 @import 'components/site-header';
