wrap datetime values in classes so they can be spaced further apart

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -17,7 +17,7 @@
             <header class="event-detail__header">
               <h2 class="event-detail__title">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
-                <p class="event-detail__datetime"><time datetime=""><strong>Thursday, August 18</strong> 6 - 8:30PM</time></p>
+                <p class="event-detail__datetime"><time datetime=""><strong class="event-detail__date">Thursday, August 18</strong> <span class="event-detail__time">6 - 8:30PM</span></time></p>
                 <p class="event-detail__access">Open to the Public</p>
               </div>
 
