--- a/src/scss/components/_event-detail.scss
+++ b/src/scss/components/_event-detail.scss
@@ -23,6 +23,13 @@
   margin-bottom: 20px;
 }
 
+.event-detail__date {
+  margin-right: 10px;
+}
+
+.event-detail__time {
+}
+
 .event-detail__access {
   font-family: $font-family-sans-serif;
   font-size: 20px;
