add titles to share links so screen readers have a label to read

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -26,17 +26,17 @@
                   <span class="share__label">Share:</span>
                   <ul class="share__list">
                     <li class="share__item">
-                      <a href="https://www.facebook.com/sharer.php?u={{pageUrl}}" target="_blank" class="share__link">{{icons.facebook}}</a></li>
+                      <a href="https://www.facebook.com/sharer.php?u={{pageUrl}}" target="_blank" title="Share on Facebook" class="share__link">
                         <span aria-hidden="true">{{icons.facebook}}</span>
                       </a>
                     </li>
                     <li class="share__item">
-                      <a href="http://twitter.com/share?text={{title}}&url={{pageUrl}}" target="_blank" class="share__link">{{icons.twitter}}</a>
+                      <a href="http://twitter.com/share?text={{title}}&url={{pageUrl}}" target="_blank" title="Share on Twitter" class="share__link">
                         <span aria-hidden="true">{{icons.twitter}}</span>
                       </a>
                     </li>
                     <li class="share__item">
-                      <a href="mailto:?subject={{title}}&body={{pageUrl}}" class="share__link">{{icons.email}}</a>
+                      <a href="mailto:?subject={{title}}&body={{pageUrl}}" title="Share via email" class="share__link">
                         <span aria-hidden="true">{{icons.email}}</span>
                       </a>
                     </li>
