add toggler util import

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -82,6 +82,7 @@
 @import 'utils/float';
 @import 'utils/text';
 @import 'utils/spacing';
+@import 'utils/toggler';
 
 .u-link-border {
   @include link-border();
