prefix ids with midd to help prevent conflicts with 3rd party assets

--- a/src/templates/partials/drawer.twig
+++ b/src/templates/partials/drawer.twig
@@ -1,4 +1,4 @@
-<div class="drawer" id="{{id}}">
+<div class="drawer{% if class %} {{class}}{% endif %}" id="{{id}}">
   <div class="drawer__content">
     {% block content %}
     {% endblock %}
