--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -67,7 +67,7 @@
     </div>
 
     <div class="secondary-footer__button">
-      <a href="#pagetop" class="button button--primary" aria-label="Back to top">
+      <a href="#midd-pagetop" class="button button--primary" aria-label="Back to top">
         {{icons.chevron_up}}
       </a>
     </div>
