--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -9,7 +9,7 @@
     </div>
 
     <div class="site-header__menu-button">
-      <a href="#site-nav" class="site-menu-button" data-toggle-target=".site-header">
+      <a href="#midd-site-nav" class="site-menu-button" data-toggle-target=".site-header">
         <span class="site-menu-button__text site-menu-button__text--open">Menu</span>
         <span class="site-menu-button__text site-menu-button__text--close">Close</span>
         <span class="site-menu-button__icon icon icon--hamburger"></span>
@@ -23,8 +23,8 @@
         <form>
           <div class="input-group">
             <div class="input-group__field">
-              <label for="site-search" class="site-search__label">Search the Institute</label>
-              <input type="search" placeholder="Search the Institute" class="site-search__control form__control" id="site-search">
+              <label for="midd-site-search" class="site-search__label">Search the Institute</label>
+              <input type="search" placeholder="Search the Institute" class="site-search__control form__control" id="midd-site-search">
             </div>
             <div class="input-group__button">
               <button type="submit" class="button site-search__button">
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="site-header__nav" id="site-nav">
+    <div class="site-header__nav" id="midd-site-nav">
       {% include 'partials/nav.twig' %}
     </div>
   </div>
