--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -14,8 +14,8 @@
           <form action="">
             <div class="input-group">
               <div class="input-group__field">
-                <label for="search" class="hero-form__label sr-only" id="midd-hero-form-label">Search</label>
-                <input type="search" placeholder="Enter your keywords" class="hero-form__control form__control" id="search" required>
+                <label for="midd-search" class="hero-form__label sr-only" id="midd-hero-form-label">Search</label>
+                <input type="search" placeholder="Enter your keywords" class="hero-form__control form__control" id="midd-search" required>
               </div>
               <div class="input-group__button">
                 <button type="submit" class="hero-form__button button" aria-label="Search">
