--- a/src/templates/partials/page-nav.twig
+++ b/src/templates/partials/page-nav.twig
@@ -1,4 +1,4 @@
-<nav class="page-nav" id="page-nav">
+<nav class="page-nav js-page-nav" id="midd-page-nav">
   <ul class="page-nav__list">
     {% for item in items %}
 
