--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7863772/css/fonts.css" />
 </head>
-<body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="pagetop">
-  <a href="#main" class="sr-only sr-focusable">Skip to content</a>
+<body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
+  <a href="#midd-main" class="sr-only sr-focusable">Skip to content</a>
   <div class="site-container">
     {% include 'partials/header.twig' %}
-    <main class="main" id="main">
+    <main class="main" id="midd-main">
       {% block page %}{% endblock %}
     </main>
     {% include 'partials/footer.twig' %}
