--- a/src/templates/partials/sidebar-search.twig
+++ b/src/templates/partials/sidebar-search.twig
@@ -2,8 +2,8 @@
   <form action="" class="form">
     <div class="input-group">
       <div class="input-group__field">
-        <label for="sidebar-search" class="sr-only">Search Events</label>
-        <input type="search" placeholder="Search events" id="sidebar-search" class="form__control sidebar-search__control" required>
+        <label for="midd-sidebar-search" class="sr-only">Search Events</label>
+        <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control sidebar-search__control" required>
       </div>
       <div class="input-group__button">
         <button type="submit" class="button button--secondary sidebar-search__button">{{icons.search}}</button>
