only set columns on desktop

--- a/src/scss/components/_site-nav.scss
+++ b/src/scss/components/_site-nav.scss
@@ -67,8 +67,10 @@
 
   // third tier
   .site-nav--sub .site-nav--sub & {
-    column-count: 2;
-    column-fill: auto;
+    @include media(lg) {
+      column-count: 2;
+      column-fill: auto;
+    }
   }
 }
 
