--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -17,7 +17,10 @@
             <header class="event-detail__header">
               <h2 class="event-detail__title">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
-                <p class="event-detail__datetime"><time datetime=""><strong class="event-detail__date">Thursday, August 18</strong> <span class="event-detail__time">6 - 8:30PM</span></time></p>
+                <p class="event-detail__datetime">
+                  <time datetime="">Thursday, August 18, 6&ndash;8:30PM</time>
+                </p>
+                <p class="event-detail__admission">TESOL Members $175; Non-members $225</p>
                 <p class="event-detail__access">Open to the Public</p>
               </div>
 
@@ -78,7 +81,12 @@
                   </li>
                 </ul>
 
-                <p><a href="#" class="button button--primary">Contact Organizer</a></p>
+                <h3>Contact Organizer</h3>
+
+                <p>Priscilla Lorenzo<br>
+                  <a href="#">plorenzo@middlebury.edu</a><br>
+                  <a href="tel:">802-555-0000</a>
+                </p>
 
                 </div>
                 <div class="col-sm-6">
