Ensure that the organizer information links are underlined on the T08 Event Detail page.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -84,8 +84,8 @@
                 <h3>Contact Organizer</h3>
 
                 <p>Priscilla Lorenzo<br>
-                  <a href="#">plorenzo@middlebury.edu</a><br>
-                  <a href="tel:">802-555-0000</a>
+                  <a href="#" class="u-link-border">plorenzo@middlebury.edu</a><br>
+                  <a href="tel:" class="u-link-border">802-555-0000</a>
                 </p>
 
                 </div>
