The start and end datetimes need to be in separate time elements in the T08 Event Detail template.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -18,7 +18,7 @@
               <h2 class="event-detail__title">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
                 <p class="event-detail__datetime">
-                  <time datetime="">Thursday, August 18, 6&ndash;8:30PM</time>
+                  <time datetime="">Thursday, August 18, 6</time>&ndash;<time datetime="">8:30PM</time>
                 </p>
                 <p class="event-detail__admission">TESOL Members $175; Non-members $225</p>
                 <p class="event-detail__access">Open to the Public</p>
