Improve the markup for the feature photo shown on the T08 Event Detail template by including captions and credits.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -49,9 +49,15 @@
             </header>
 
             <div class="event-detail__media">
-              <picture>
-                <img src="//placehold.it/800x500" alt="">
-              </picture>
+              <figure>
+                <picture>
+                  <img src="//placehold.it/800x500" alt="">
+                </picture>
+                <figcaption>
+                  This is a caption for this image.
+                  <span class="media__credit">Credit</span>
+                </figcaption>
+              </figure>
             </div>
 
             <div class="event-detail__body typography">
