Add an aria-labelledby attribute for the article on the T08 Event Detail template linking it to the title.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -9,13 +9,13 @@
       ]
     } %}
 
-    <article class="event-detail">
+    <article class="event-detail" aria-labelledby="midd-event-label">
       <div class="container">
         <div class="row">
 
           <div class="col-md-push-1 col-md-7">
             <header class="event-detail__header">
-              <h2 class="event-detail__title">Museum of Art Lecture Series</h2>
+              <h2 class="event-detail__title" id="midd-event-label">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
                 <p class="event-detail__datetime">
                   <time datetime="">Thursday, August 18, 6</time>&ndash;<time datetime="">8:30PM</time>
