--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -8,7 +8,9 @@
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7863772/css/fonts.css" />
 </head>
 <body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
-  <a href="#midd-main" class="sr-only sr-focusable">Skip to content</a>
+  <nav aria-labelledby="midd-skip-link">
+    <a href="#midd-main" class="sr-only sr-focusable" id="midd-skip-link">Skip to content</a>
+  </nav>
   <div class="site-container">
     {% include 'partials/header.twig' %}
     <main class="main" id="midd-main">
